tests/paczka1/small_fuzzy/15600275.err
Error in line 1: R3PfpPer S894 24,8
Error in line 3: HhLQb S894 71,4
Error in line 5: HhLQb A250 98,2
Error in line 7: R3PfpPer S894 42,9
